Add button styles and dark color scheme support

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -2,5 +2,9 @@
 @use "vendors";
 @use "base";
 @use "layout";
+@use "blocks";
 @use "components";
 @use "pages";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
