Update button styles for improved color accessibility and add responsive styles for group and columns components

--- a/src/scss/pages/dark-colors.scss
+++ b/src/scss/pages/dark-colors.scss
@@ -6,10 +6,10 @@
     //   --wp--preset--color--primary-container-fixed: #bce9ffff;
       --wp--preset--color--on-primary-container: #bce9ff;
     //   --wp--preset--color--on-primary-container-fixed: #001f2aff;
-      --wp--preset--color--secondary: #89d0ed;
-      --wp--preset--color--on-secondary: #003544;
-      --wp--preset--color--secondary-container: #004d62;
-      --wp--preset--color--on-secondary-container: #baeaff;
+      --wp--preset--color--secondary: #FFB0C9;
+      --wp--preset--color--on-secondary: #541D33;
+      --wp--preset--color--secondary-container: #6F3349;
+      --wp--preset--color--on-secondary-container: #FFD9E3;
       --wp--preset--color--tertiary: #d1bcfd;
       --wp--preset--color--on-tertiary: #4e3d75;
       --wp--preset--color--tertiary-container: #4e3d75;
@@ -35,4 +35,3 @@
       --wp--preset--color--backdrop: #2A323540;
     }
   }
-  
