--- a/src/scss/blocks/core/group.scss
+++ b/src/scss/blocks/core/group.scss
@@ -1,9 +1,14 @@
 .wp-block-group {
 	// padding added for parity with the block editor
-	padding-bottom: 0;
-	padding-top: 0;
+
 	&.is-selected,
 	&.has-child-selected {
 		padding-bottom: 1.25em;
 	}
+}
+section.wp-block-group {
+	@apply px-4 md:px-0 py-8 md:py-16 !important;
+}
+.full_mobile_half_desktop__container{
+	@apply w-full md:w-1/2  h-full;
 }
