Refactor theme to rename from BlockTheme to Up-cycled Full Site Theme, update related patterns, styles, and configurations

--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
-Theme Name: BlockTheme
-Theme URI: https://www.github.com/bacoords/block-theme
-Author: BlockTheme Contributors
-Author URI: https://www.github.com/bacoords/block-theme/graphs/contributors
+Theme Name: Up-cycled Full Site Theme
+Theme URI: https://www.github.com/somteacodes/upcycled-fse
+Author: Up-cycled Full Site Theme Contributors
+Author URI: https://www.github.com/somteacodes/upcycled-fse/graphs/contributors
 Description: A starter theme for modern WordPress developers.
 Version: 0.0.2
 Requires PHP: 7.4
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Tags:
-Text Domain: block-theme
+Text Domain: upcycled-fse
 */
