Add form styles and update hero component gradient for improved layout

--- a/src/scss/components/hero.scss
+++ b/src/scss/components/hero.scss
@@ -1,20 +1,24 @@
 
-.nk-awb-wrap-content{
-	@apply h-full w-full !important;
-}
+// .nk-awb-wrap-content{
+// 	@apply h-full w-full !important;
+// }
 
 .hero__container{
 
-    @apply md:bg-gradient-to-b bg-gradient-to-b !important;
-    // @apply backdrop-blur-sm !important;
-    @apply from-primary-container via-primary-container via-65% md:via-50% to-transparent !important;
-}
-.wp-block-nk-awb{
-    padding: 0rem !important;
-}
-.nk-awb-wrap.nk-awb-rendered
-{
-	// reduce the width of the rendered block
-	@apply  flex !important;
 
+    // @apply backdrop-blur-sm !important;
+    @apply bg-gradient-to-br from-primary-container/50 to-secondary-container/50 rounded-2xl !important;
+}
+// .wp-block-nk-awb{
+//     padding: 0rem !important;
+// }
+// .nk-awb-wrap.nk-awb-rendered
+// {
+// 	// reduce the width of the rendered block
+// 	@apply  flex !important;
+
+// }
+
+.hero__contents{
+	@apply w-full md:w-3/4 !important ;
 }
