--- a/src/scss/layout/body.scss
+++ b/src/scss/layout/body.scss
@@ -5,9 +5,9 @@ div.newsdesk-section__container
 {
 
 	>ul.wp-block-post-template{
-		@apply flex   gap-4 !important;
+		@apply grid grid-cols-1 md:grid-cols-3 gap-6  w-full !important;
 		li{
-			@apply bg-surface-variant rounded-lg p-4 space-y-4 w-full flex flex-col;
+			@apply bg-surface-variant/50 shadow rounded-lg p-4 gap-6 w-full flex flex-col;
 		}
 	}
 
